package ru.nsu.ga.grentseva.pizzeria.config;

public class BakerConfig {

    private int cookTime;

    public int getCookTime() {
        return cookTime;
    }
}