package ru.nsu.ga.grentseva.pizzeria.config;

public class CourierConfig {

    private int capacity;

    public int getCapacity() {
        return capacity;
    }
}