package ru.nsu.ga.grentseva.pizzeria.ordermodel;

public interface OrderFactory {
    Order create(int id);
}