package ru.nsu.ga.grentseva.pizzeria.ordermodel;

public enum OrderStatus {
    NEW,
    COOKING,
    COOKED,
    STORED,
    DELIVERING,
    DELIVERED
}
