package ru.nsu.ga.grentseva.pizzeria.util;

public class ConsoleLogger implements Logger {

    @Override
    public void log(String message) {
        System.out.println(message);
    }
}